# westgard-sim

./: .gitignore  LICENSE  README.md  activate.ps1  pyproject.toml  requirements.txt  run_authoring_ui.ps1  student_web_ops.ps1  westgard_ops.ps1
apps/student-web/: README.md  (+7 more)
content/: ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  QUICK_REFERENCE.md  README.md  authoring_adapter.py  authoring_catalog.example.json  authoring_catalog.schema.json  authoring_validation.py  experiment_catalog.generated.json  experiment_catalog.json  lessons.json  load_content.py  scenarios.json  validate_content.py
docs/: AUTHORING_MVP_GUIDE.md  AUTHORING_MVP_TUTORIAL.md  BEA_PILOT_CHECKLIST.md  FLASHCARDS_GUIDE.md  PILOT_QUICKSTART_5_MIN.md  PILOT_RECOVERY_GUIDE.md  PILOT_TROUBLESHOOTING.md  README.md  STUDENT_FRONTEND_GUIDE.md  STUDENT_FRONTEND_PLAN.md  crear_experimento.md
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  manifest.json
qc_lab_simulator/: __init__.py  config.py  export.py  metrics.py  models.py  plots.py  rules.py  scenarios.py  simulate.py  web_export.py
scripts/: authoring_mvp.py  authoring_ops.py  build_experiment_catalog.py  export_flashcards.py  export_web_data.py  run_demo.py  smoke_authoring_flow.py  sync_student_web_assets.py
tests/: conftest.py  test_authoring_adapter.py  test_authoring_ops.py  test_authoring_smoke_flow.py  test_authoring_validation.py  test_export_web_data_script.py  test_flashcards_export.py  test_flashcards_markup.py  test_flashcards_validation.py  test_rules.py  test_scenarios.py  test_simulate.py  test_web_export.py
(+63 files in other folders)
