[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qc-lab-simulator"
version = "0.1.0"
description = "Reproducible internal QC simulator for clinical laboratory education"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.25",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "jsonschema>=4.18",
    "streamlit>=1.36",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
